Changed page naming to make portfolio the landing page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Portfolio</title>
 </head>
 <body>
-<img src="https://picsum.photos/200/300"
+<img src="https://picsum.photos/200/300">
 </body>
 </html>
