--- a/index.html
+++ b/index.html
@@ -5,6 +5,63 @@
     <title>Portfolio</title>
 </head>
 <body>
-<img src="https://picsum.photos/200/300">
+    <header>
+        <h2>FELIX LETHEREN</h2>
+        <div class="container">
+            <div class="nav-bar">
+                <a class="nav-items">About</a>
+                <a class="nav-items">Portfolio</a>
+                <a class="nav-items">Contact Me</a>
+            </div>
+            </div>
+    </header>
+<div class="hero">
+    <h1>Portfolio</h1>
+</div>
+<section class="port-back">
+    <div class="container">
+        <div class="port-item">
+            <img src="#">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+    </div>
+    <div class="container">
+        <div class="port-item">
+            <img src="#">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+    </div>
+    <div class="container">
+        <div class="port-item">
+            <img src="#">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+    </div>
+    <div class="container">
+        <div class="port-item">
+            <img src="#">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+    </div>
+    <div class="container">
+        <div class="port-item">
+            <img src="#">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+    </div>
+    <div class="container">
+        <div class="port-item">
+            <img src="#">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
