Added header HTML for all pages and added HTML to about page

--- a/about.html
+++ b/about.html
@@ -8,6 +8,89 @@
     <link rel="stylesheet" type="text/css" href="normalise.css">
 </head>
 <body>
+    <header>
+        <h2>FELIX LETHEREN</h2>
+        <div class="container">
+            <div class="nav-bar">
+                <a class="nav-items">Portfolio</a>
+                <a class="nav-items">About Me</a>
+                <a class="nav-items">Contact Me</a>
+            </div>
+        </div>
+    </header>
+    <section class="main-back">
+        <div class="container">
+            <div class="bio">
+                <h2>Bio</h2>
+                <p>I am a full stack developer based in Bath. I am learning with
+                    Mayden academy’s full stack track course to gain a broad
+                    understanding of web development. I am a highly driven individual
+                    with experience working in a team environment. Through my career
+                    in hospitality I have learnt effective team and time management
+                    and have built upon these skills working as a development team
+                    with Mayden Academy.
+            </div>
+            <div class="skills">
+                <h2>Skills</h2>
+                <div class="skill-box">
+                    <h3>HTML5</h3>
+                    <div class="skill-bar-empty">
+                        <div id="html-bar"></div>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <h3>CSS</h3>
+                    <div class="skill-bar-empty">
+                        <div id="css-bar"></div>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <h3>Javascript</h3>
+                    <div class="skill-bar-empty">
+                        <div id="javascript-bar"></div>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <h3>PHP</h3>
+                    <div class="skill-bar-empty">
+                        <div id="php-bar"></div>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <h3>SQL</h3>
+                    <div class="skill-bar-empty">
+                        <div id="sql-bar"></div>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <h3>jQuery</h3>
+                    <div class="skill-bar-empty">
+                        <div id="jquery-bar"></div>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <h3>Node.js</h3>
+                    <div class="skill-bar-empty">
+                        <div id="node.js-bar"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="work-exp-box">
+                <h3>Work Experience</h3>
+                <div class="exp-entry">
+                    <img src="#">
+                    <h3>Thai Leisure Group</h3>
+                    <h2>Business Manager</h2>
+                    <p>During my time in this role I ajhsbf aahjsdbfjh jbasdjfb
+                        asdfhbjas dfh sdf hbjfsadhbsadfjhsbfd  f s dfjhbasdhf
+                        sa dfbhjashdbfjhs sd fahsjfbasf bhjsf shbjhsadbjfasd f
+                        asjbhjasdfjhas fas dsf </p>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
 
 </body>
 </html>
