--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h2>FELIX LETHEREN</h2>
         <div class="container">
             <div class="nav-bar">
-                <a class="nav-items">About</a>
                 <a class="nav-items">Portfolio</a>
+                <a class="nav-items">About Me</a>
                 <a class="nav-items">Contact Me</a>
             </div>
             </div>
@@ -21,7 +21,7 @@
 <div class="hero">
     <h1>Portfolio</h1>
 </div>
-<section class="port-back">
+<section class="main-back">
     <div class="container">
         <div class="port-item">
             <img src="#">
