--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" type="text/css" href="normalise.css">
 </head>
 <body>
+    <header>
+        <h2>FELIX LETHEREN</h2>
+        <div class="container">
+            <div class="nav-bar">
+                <a class="nav-items">Portfolio</a>
+                <a class="nav-items">About Me</a>
+                <a class="nav-items">Contact Me</a>
+            </div>
+        </div>
+    </header>
 
 </body>
 </html>
