Added HTML for contact me page

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,20 @@
             </div>
         </div>
     </header>
-
+    <section class="main-back">
+        <div class="container">
+            <h2>felix(dot)letheren(at)gsail(dot)com</h2>
+        </div>
+        <div class="container">
+            <a href="#"><img src="#"></a>
+            <p>@jhsbadfjajsbfb</p>
+            <a href="#"><img src="#"></a>
+            <p>@jhsbadfjajsbfb</p>
+            <a href="#"><img src="#"></a>
+            <p>@jhsbadfjajsbfb</p>
+            <a href="#"><img src="#"></a>
+            <p>@jhsbadfjajsbfb</p>
+        </div>
+    </section>
 </body>
 </html>
