Added color formatting and begun basic CSS and layout of all pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="normalise.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
     <header>
-        <h2>FELIX LETHEREN</h2>
+        <h2 class="logo">FELIX<br>LETHEREN</h2>
         <div class="container">
             <div class="nav-bar">
                 <a class="nav-items">Portfolio</a>
@@ -18,10 +18,10 @@
             </div>
             </div>
     </header>
-<div class="hero">
-    <h1>Portfolio</h1>
-</div>
 <section class="main-back">
+    <div class="hero">
+        <h1>Portfolio</h1>
+    </div>
     <div class="container">
         <div class="port-item">
             <img src="#">
