--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Me</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="normalise.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
     <header>
-        <h2>FELIX LETHEREN</h2>
+        <h2 class="logo">FELIX<br>LETHEREN</h2>
         <div class="container">
             <div class="nav-bar">
                 <a class="nav-items">Portfolio</a>
