--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h2 class="logo">FELIX<br>LETHEREN</h2>
-        <div class="container">
+        <div class="nav-cont">
             <div class="nav-bar">
                 <a class="nav-items">Portfolio</a>
                 <a class="nav-items">About Me</a>
