--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
         <h2 class="logo">FELIX<br>LETHEREN</h2>
         <div class="nav-cont">
             <div class="nav-bar">
-                <a class="nav-items">Portfolio</a>
-                <a class="nav-items">About Me</a>
-                <a class="nav-items">Contact Me</a>
+                <a href="index.html" class="nav-items">Portfolio</a>
+                <a href="about.html" class="nav-items">About Me</a>
+                <a href="contact.html" class="nav-items">Contact Me</a>
             </div>
         </div>
     </header>
