--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h2 class="logo">FELIX<br>LETHEREN</h2>
         <div class="nav-cont">
             <div class="nav-bar">
-                <a class="nav-items">Portfolio</a>
-                <a class="nav-items">About Me</a>
-                <a class="nav-items">Contact Me</a>
+                <a href="index.html" class="nav-items">Portfolio</a>
+                <a href="about.html" class="nav-items">About Me</a>
+                <a href="contact.html" class="nav-items">Contact Me</a>
             </div>
             </div>
     </header>
@@ -22,44 +22,38 @@
     <div class="hero">
         <h1>Portfolio</h1>
     </div>
-    <div class="container">
+    <div class="container port-cont">
         <div class="port-item">
-            <img src="#">
+            <img src="https://picsum.photos/400/300">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+        <div class="port-item">
+            <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
     </div>
-    <div class="container">
+    <div class="container port-cont">
         <div class="port-item">
-            <img src="#">
+            <img src="https://picsum.photos/400/300">
+            <h3>Title</h3>
+            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+        </div>
+        <div class="port-item">
+            <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
     </div>
-    <div class="container">
+    <div class="container port-cont">
         <div class="port-item">
-            <img src="#">
+            <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
-    </div>
-    <div class="container">
         <div class="port-item">
-            <img src="#">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
-        </div>
-    </div>
-    <div class="container">
-        <div class="port-item">
-            <img src="#">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
-        </div>
-    </div>
-    <div class="container">
-        <div class="port-item">
-            <img src="#">
+            <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
