Spacing problems with portfolio items resolved

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hero">
         <h1>Portfolio</h1>
     </div>
-    <div class="container port-cont">
+    <div class="port-cont">
         <div class="port-item">
             <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
@@ -34,7 +34,7 @@
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
     </div>
-    <div class="container port-cont">
+    <div class="port-cont">
         <div class="port-item">
             <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
@@ -46,7 +46,7 @@
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
     </div>
-    <div class="container port-cont">
+    <div class="port-cont">
         <div class="port-item">
             <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
