scaffolding complete for About me

--- a/about.html
+++ b/about.html
@@ -19,7 +19,10 @@
         </div>
     </header>
     <section class="main-back">
-        <div class="container">
+        <div class="hero">
+            <h1>About me</h1>
+        </div>
+        <div class="port-cont">
             <div class="bio">
                 <h2>Bio</h2>
                 <p>I am a full stack developer based in Bath. I am learning with
@@ -33,52 +36,56 @@
             <div class="skills">
                 <h2>Skills</h2>
                 <div class="skill-box">
-                    <h3>HTML5</h3>
+                    <h4>HTML5</h4>
                     <div class="skill-bar-empty">
                         <div id="html-bar"></div>
                     </div>
                 </div>
                 <div class="skill-box">
-                    <h3>CSS</h3>
+                    <h4>CSS</h4>
                     <div class="skill-bar-empty">
                         <div id="css-bar"></div>
                     </div>
                 </div>
                 <div class="skill-box">
-                    <h3>Javascript</h3>
+                    <h4>Javascript</h4>
                     <div class="skill-bar-empty">
                         <div id="javascript-bar"></div>
                     </div>
                 </div>
                 <div class="skill-box">
-                    <h3>PHP</h3>
+                    <h4>PHP</h4>
                     <div class="skill-bar-empty">
                         <div id="php-bar"></div>
                     </div>
                 </div>
                 <div class="skill-box">
-                    <h3>SQL</h3>
+                    <h4>SQL</h4>
                     <div class="skill-bar-empty">
                         <div id="sql-bar"></div>
                     </div>
                 </div>
                 <div class="skill-box">
-                    <h3>jQuery</h3>
+                    <h4>jQuery</h4>
                     <div class="skill-bar-empty">
                         <div id="jquery-bar"></div>
                     </div>
                 </div>
                 <div class="skill-box">
-                    <h3>Node.js</h3>
+                    <h4>Node.js</h4>
                     <div class="skill-bar-empty">
                         <div id="node.js-bar"></div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="work-exp-box">
-                <h3>Work Experience</h3>
+                <h2>Work Experience</h2>
                 <div class="exp-entry">
-                    <img src="#">
+                    <div class="exp-img">
+                        <img src="Thai-Leisure-Group-logo.png">
+                    </div>
                     <h3>Thai Leisure Group</h3>
                     <h2>Business Manager</h2>
                     <p>During my time in this role I ajhsbf aahjsdbfjh jbasdjfb
