Finished Scaffolding of all pages

--- a/contact.html
+++ b/contact.html
@@ -19,17 +19,29 @@
         </div>
     </header>
     <section class="main-back">
-        <div class="container">
-            <h2>felix(dot)letheren(at)gsail(dot)com</h2>
+        <div class="hero">
+            <h1>Contact me</h1>
         </div>
         <div class="container">
-            <a href="#"><img src="#"></a>
+            <h3>Want to get in touch? Drop me an E-mail!-</h3>
+            <img class="email" src="email.png">
+        </div>
+        <div class="container social-cont">
+            <a href="#"><img src="git-logo.png"></a>
             <p>@jhsbadfjajsbfb</p>
-            <a href="#"><img src="#"></a>
+            <a href="#"><img src="git-logo-yell.png"></a>
             <p>@jhsbadfjajsbfb</p>
-            <a href="#"><img src="#"></a>
+        </div>
+        <div class="container social-cont">
+            <a href="#"><img src="git-logo-red.png"></a>
             <p>@jhsbadfjajsbfb</p>
-            <a href="#"><img src="#"></a>
+            <a href="#"><img src="git-logo.png"></a>
+            <p>@jhsbadfjajsbfb</p>
+        </div>
+        <div class="container social-cont">
+            <a href="#"><img src="git-logo-red.png"></a>
+            <p>@jhsbadfjajsbfb</p>
+            <a href="#"><img src="git-logo.png"></a>
             <p>@jhsbadfjajsbfb</p>
         </div>
     </section>
