--- a/contact.html
+++ b/contact.html
@@ -24,25 +24,27 @@
         </div>
         <div class="container">
             <h3>Want to get in touch? Drop me an E-mail!-</h3>
-            <img class="email" src="email.png">
+            <h3>felix.letheren(at)gmail.com</h3>
         </div>
         <div class="container social-cont">
-            <a href="#"><img src="git-logo.png"></a>
-            <p>@jhsbadfjajsbfb</p>
-            <a href="#"><img src="git-logo-yell.png"></a>
-            <p>@jhsbadfjajsbfb</p>
+            <div class="social-item">
+                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            </div>
+            <div class="social-item">
+                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            </div>
         </div>
         <div class="container social-cont">
-            <a href="#"><img src="git-logo-red.png"></a>
-            <p>@jhsbadfjajsbfb</p>
-            <a href="#"><img src="git-logo.png"></a>
-            <p>@jhsbadfjajsbfb</p>
-        </div>
-        <div class="container social-cont">
-            <a href="#"><img src="git-logo-red.png"></a>
-            <p>@jhsbadfjajsbfb</p>
-            <a href="#"><img src="git-logo.png"></a>
-            <p>@jhsbadfjajsbfb</p>
+            <div class="social-item">
+                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            </div>
+            <div class="social-item">
+                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            </div>
         </div>
     </section>
 </body>
