made about page mobile friendly

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <div class="hero">
             <h1>About me</h1>
         </div>
-        <div class="port-cont">
+        <div class="about-cont">
             <div class="bio">
                 <h2>Bio</h2>
                 <p>I am a full stack developer based in Bath. I am learning with
@@ -88,10 +88,9 @@
                     </div>
                     <h3>Thai Leisure Group</h3>
                     <h2>Business Manager</h2>
-                    <p>During my time in this role I ajhsbf aahjsdbfjh jbasdjfb
-                        asdfhbjas dfh sdf hbjfsadhbsadfjhsbfd  f s dfjhbasdhf
-                        sa dfbhjashdbfjhs sd fahsjfbasf bhjsf shbjhsadbjfasd f
-                        asjbhjasdfjhas fas dsf </p>
+                    <p>During my time in this role I gained valuable experience in managing the day to day running
+                    of a business. This involved managing over 40 employees, maintaining health and safety standards,
+                    co-ordinating maintenance, balancing the profit and loss report, along with other responsibilities.</p>
                 </div>
 
             </div>
