Made contact us page responsive on mobile

--- a/contact.html
+++ b/contact.html
@@ -8,44 +8,44 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-    <header>
-        <h2 class="logo">FELIX<br>LETHEREN</h2>
-        <div class="nav-cont">
-            <div class="nav-bar">
-                <a href="index.html" class="nav-items">Portfolio</a>
-                <a href="about.html" class="nav-items">About Me</a>
-                <a href="contact.html" class="nav-items">Contact Me</a>
-            </div>
+<header>
+    <h2 class="logo">FELIX<br>LETHEREN</h2>
+    <div class="nav-cont">
+        <div class="nav-bar">
+            <a href="index.html" class="nav-items">Portfolio</a>
+            <a href="about.html" class="nav-items">About Me</a>
+            <a href="contact.html" class="nav-items">Contact Me</a>
         </div>
-    </header>
-    <section class="main-back">
-        <div class="hero">
-            <h1>Contact me</h1>
+    </div>
+</header>
+<section class="main-back">
+    <div class="hero">
+        <h1>Contact me</h1>
+    </div>
+    <div class="container email-box">
+        <h3>Want to get in touch? Drop me an E-mail!-</h3>
+        <h3>felix.letheren(at)gmail.com</h3>
+    </div>
+    <div class="container social-cont">
+        <div class="social-item left">
+            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
-        <div class="container">
-            <h3>Want to get in touch? Drop me an E-mail!-</h3>
-            <h3>felix.letheren(at)gmail.com</h3>
+        <div class="social-item right">
+            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
-        <div class="container social-cont">
-            <div class="social-item">
-                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
-                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
-            </div>
-            <div class="social-item">
-                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
-                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
-            </div>
+    </div>
+    <div class="container social-cont">
+        <div class="social-item left">
+            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
-        <div class="container social-cont">
-            <div class="social-item">
-                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
-                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
-            </div>
-            <div class="social-item">
-                <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
-                <a href="https://github.com/FelixLetheren">FelixLetheren</a>
-            </div>
+        <div class="social-item right">
+            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
-    </section>
+    </div>
+</section>
 </body>
 </html>
