--- a/about.html
+++ b/about.html
@@ -8,95 +8,96 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-    <header>
-        <h2 class="logo">FELIX<br>LETHEREN</h2>
-        <div class="nav-cont">
-            <div class="nav-bar">
-                <a href="index.html" class="nav-items">Portfolio</a>
-                <a href="about.html" class="nav-items">About Me</a>
-                <a href="contact.html" class="nav-items">Contact Me</a>
-            </div>
+<header>
+    <h2 class="logo">FELIX<br>LETHEREN</h2>
+    <div class="nav-cont">
+        <div class="nav-bar">
+            <a href="index.html" class="nav-items">Portfolio</a>
+            <a href="about.html" class="nav-items">About Me</a>
+            <a href="contact.html" class="nav-items">Contact Me</a>
         </div>
-    </header>
-    <section class="main-back">
-        <div class="hero">
-            <h1>About me</h1>
+    </div>
+</header>
+<section class="main-back">
+    <div class="hero">
+        <h1>About me</h1>
+    </div>
+    <div class="about-cont">
+        <div class="bio">
+            <h2>Bio</h2>
+            <p>I am a full stack developer based in Bath. I am learning with
+                Mayden academy’s full stack track course to gain a broad
+                understanding of web development. I am a highly driven individual
+                with experience working in a team environment. Through my career
+                in hospitality I have learnt effective team and time management
+                and have built upon these skills working as a development team
+                with Mayden Academy.
         </div>
-        <div class="about-cont">
-            <div class="bio">
-                <h2>Bio</h2>
-                <p>I am a full stack developer based in Bath. I am learning with
-                    Mayden academy’s full stack track course to gain a broad
-                    understanding of web development. I am a highly driven individual
-                    with experience working in a team environment. Through my career
-                    in hospitality I have learnt effective team and time management
-                    and have built upon these skills working as a development team
-                    with Mayden Academy.
-            </div>
-            <div class="skills">
-                <h2>Skills</h2>
-                <div class="skill-box">
-                    <h4>HTML5</h4>
-                    <div class="skill-bar-empty">
-                        <div id="html-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h4>CSS</h4>
-                    <div class="skill-bar-empty">
-                        <div id="css-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h4>Javascript</h4>
-                    <div class="skill-bar-empty">
-                        <div id="javascript-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h4>PHP</h4>
-                    <div class="skill-bar-empty">
-                        <div id="php-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h4>SQL</h4>
-                    <div class="skill-bar-empty">
-                        <div id="sql-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h4>jQuery</h4>
-                    <div class="skill-bar-empty">
-                        <div id="jquery-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h4>Node.js</h4>
-                    <div class="skill-bar-empty">
-                        <div id="node.js-bar"></div>
-                    </div>
+        <div class="skills">
+            <h2>Skills</h2>
+            <div class="skill-box">
+                <h4>HTML5</h4>
+                <div class="skill-bar-empty">
+                    <div id="html-bar"></div>
                 </div>
             </div>
+            <div class="skill-box">
+                <h4>CSS</h4>
+                <div class="skill-bar-empty">
+                    <div id="css-bar"></div>
+                </div>
+            </div>
+            <div class="skill-box">
+                <h4>Javascript</h4>
+                <div class="skill-bar-empty">
+                    <div id="javascript-bar"></div>
+                </div>
+            </div>
+            <div class="skill-box">
+                <h4>PHP</h4>
+                <div class="skill-bar-empty">
+                    <div id="php-bar"></div>
+                </div>
+            </div>
+            <div class="skill-box">
+                <h4>SQL</h4>
+                <div class="skill-bar-empty">
+                    <div id="sql-bar"></div>
+                </div>
+            </div>
+            <div class="skill-box">
+                <h4>jQuery</h4>
+                <div class="skill-bar-empty">
+                    <div id="jquery-bar"></div>
+                </div>
+            </div>
+            <div class="skill-box">
+                <h4>Node.js</h4>
+                <div class="skill-bar-empty">
+                    <div id="node.js-bar"></div>
+                </div>
+            </div>
         </div>
-        <div class="container">
-            <div class="work-exp-box">
-                <h2>Work Experience</h2>
-                <div class="exp-entry">
-                    <div class="exp-img">
-                        <img src="Thai-Leisure-Group-logo.png">
-                    </div>
-                    <h3>Thai Leisure Group</h3>
-                    <h2>Business Manager</h2>
-                    <p>During my time in this role I gained valuable experience in managing the day to day running
+    </div>
+    <div class="container">
+        <div class="work-exp-box">
+            <h2>Work Experience</h2>
+            <div class="exp-entry">
+                <div class="exp-img">
+                    <img src="Thai-Leisure-Group-logo.png">
+                </div>
+                <h3>Thai Leisure Group</h3>
+                <h2>Business Manager</h2>
+                <p>During my time in this role I gained valuable experience in managing the day to day running
                     of a business. This involved managing over 40 employees, maintaining health and safety standards,
-                    co-ordinating maintenance, balancing the profit and loss report, along with other responsibilities.</p>
-                </div>
-
+                    co-ordinating maintenance, balancing the profit and loss report, along with other
+                    responsibilities.</p>
             </div>
-        </div>
 
-    </section>
+        </div>
+    </div>
+
+</section>
 
 </body>
 </html>
