Changed all classes named cont to container

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <h2 class="logo">FELIX<br>LETHEREN</h2>
-    <div class="nav-cont">
+    <div class="nav-container">
         <div class="nav-bar">
             <a href="index.html" class="nav-items">Portfolio</a>
             <a href="about.html" class="nav-items">About Me</a>
@@ -22,7 +22,7 @@
     <div class="hero">
         <h1>About me</h1>
     </div>
-    <div class="about-cont">
+    <div class="about-container">
         <div class="bio">
             <h2>Bio</h2>
             <p>I am a full stack developer based in Bath. I am learning with
