--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <h2 class="logo">FELIX<br>LETHEREN</h2>
-    <div class="nav-cont">
+    <div class="nav-container">
         <div class="nav-bar">
             <a href="index.html" class="nav-items">Portfolio</a>
             <a href="about.html" class="nav-items">About Me</a>
@@ -26,7 +26,7 @@
         <h3>Want to get in touch? Drop me an E-mail!-</h3>
         <h3>felix.letheren(at)gmail.com</h3>
     </div>
-    <div class="container social-cont">
+    <div class="container social-container">
         <div class="social-item left">
             <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
             <a href="https://github.com/FelixLetheren">FelixLetheren</a>
@@ -36,7 +36,7 @@
             <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
     </div>
-    <div class="container social-cont">
+    <div class="container social-container">
         <div class="social-item left">
             <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
             <a href="https://github.com/FelixLetheren">FelixLetheren</a>
