--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <h2 class="logo">FELIX<br>LETHEREN</h2>
-    <div class="nav-cont">
+    <div class="nav-container">
         <div class="nav-bar">
             <a href="index.html" class="nav-items">Portfolio</a>
             <a href="about.html" class="nav-items">About Me</a>
@@ -22,7 +22,7 @@
     <div class="hero">
         <h1>Portfolio</h1>
     </div>
-    <div class="port-cont">
+    <div class="port-container">
         <div class="port-item">
             <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
@@ -34,7 +34,7 @@
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
     </div>
-    <div class="port-cont">
+    <div class="port-container">
         <div class="port-item">
             <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
@@ -46,7 +46,7 @@
             <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
         </div>
     </div>
-    <div class="port-cont">
+    <div class="port-container">
         <div class="port-item">
             <img src="https://picsum.photos/400/300">
             <h3>Title</h3>
