Moved images and stylesheets into seperate folders to keep project clean

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
-    <link rel="stylesheet" type="text/css" href="normalise.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalise.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
 </head>
 <body>
 <header>
@@ -26,9 +26,9 @@
         <div class="bio">
             <h2>Bio</h2>
             <p>I am a full stack developer based in Bath. I am learning with
-                Mayden academy’s full stack track course to gain a broad
+                Mayden Academy’s full stack track course to gain a broad
                 understanding of web development. I am a highly driven individual
-                with experience working in a team environment. Through my career
+                with experience working in a team environment. Throughout my career
                 in hospitality I have learnt effective team and time management
                 and have built upon these skills working as a development team
                 with Mayden Academy.
@@ -74,7 +74,7 @@
             <div class="skill-box">
                 <h4>Node.js</h4>
                 <div class="skill-bar-empty">
-                    <div id="node.js-bar"></div>
+                    <div id="node-js-bar"></div>
                 </div>
             </div>
         </div>
@@ -88,12 +88,11 @@
                 </div>
                 <h3>Thai Leisure Group</h3>
                 <h2>Business Manager</h2>
-                <p>During my time in this role I gained valuable experience in managing the day to day running
+                <p>During my time in this role I gained valuable experience in managing the day-to-day running
                     of a business. This involved managing over 40 employees, maintaining health and safety standards,
                     co-ordinating maintenance, balancing the profit and loss report, along with other
                     responsibilities.</p>
             </div>
-
         </div>
     </div>
 
