--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Me</title>
-    <link rel="stylesheet" type="text/css" href="normalise.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalise.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
 </head>
 <body>
 <header>
