Made recommended adjustments from code review

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 </header>
-<section class="main-back">
+<section class="background">
     <div class="hero">
         <h1>About me</h1>
     </div>
@@ -37,44 +37,29 @@
             <h2>Skills</h2>
             <div class="skill-box">
                 <h4>HTML5</h4>
-                <div class="skill-bar-empty">
-                    <div id="html-bar"></div>
-                </div>
             </div>
             <div class="skill-box">
                 <h4>CSS</h4>
-                <div class="skill-bar-empty">
-                    <div id="css-bar"></div>
                 </div>
             </div>
             <div class="skill-box">
                 <h4>Javascript</h4>
-                <div class="skill-bar-empty">
-                    <div id="javascript-bar"></div>
                 </div>
             </div>
             <div class="skill-box">
                 <h4>PHP</h4>
-                <div class="skill-bar-empty">
-                    <div id="php-bar"></div>
                 </div>
             </div>
             <div class="skill-box">
                 <h4>SQL</h4>
-                <div class="skill-bar-empty">
-                    <div id="sql-bar"></div>
                 </div>
             </div>
             <div class="skill-box">
                 <h4>jQuery</h4>
-                <div class="skill-bar-empty">
-                    <div id="jquery-bar"></div>
                 </div>
             </div>
             <div class="skill-box">
                 <h4>Node.js</h4>
-                <div class="skill-bar-empty">
-                    <div id="node-js-bar"></div>
                 </div>
             </div>
         </div>
