--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 </header>
-<section class="main-back">
+<section class="background">
     <div class="hero">
         <h1>Contact me</h1>
     </div>
@@ -28,21 +28,21 @@
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
             <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
         <div class="social-item right">
-            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
             <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
             <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
         <div class="social-item right">
-            <a href="https://github.com/FelixLetheren"><img src="git-logo.png"></a>
+            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
             <a href="https://github.com/FelixLetheren">FelixLetheren</a>
         </div>
     </div>
