--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 </header>
-<section class="main-back">
+<section class="background">
     <div class="hero">
         <h1>Portfolio</h1>
     </div>
