--- a/about.html
+++ b/about.html
@@ -40,27 +40,21 @@
             </div>
             <div class="skill-box">
                 <h4>CSS</h4>
-                </div>
             </div>
             <div class="skill-box">
                 <h4>Javascript</h4>
-                </div>
             </div>
             <div class="skill-box">
                 <h4>PHP</h4>
-                </div>
             </div>
             <div class="skill-box">
                 <h4>SQL</h4>
-                </div>
             </div>
             <div class="skill-box">
                 <h4>jQuery</h4>
-                </div>
             </div>
             <div class="skill-box">
                 <h4>Node.js</h4>
-                </div>
             </div>
         </div>
     </div>
@@ -69,7 +63,7 @@
             <h2>Work Experience</h2>
             <div class="exp-entry">
                 <div class="exp-img">
-                    <img src="Thai-Leisure-Group-logo.png">
+                    <img src="images/Thai-Leisure-Group-logo.png">
                 </div>
                 <h3>Thai Leisure Group</h3>
                 <h2>Business Manager</h2>
