replaced skill section with icons instead of skill bars

--- a/about.html
+++ b/about.html
@@ -35,26 +35,15 @@
         </div>
         <div class="skills">
             <h2>Skills</h2>
-            <div class="skill-box">
-                <h4>HTML5</h4>
+            <div class="skill-container">
+                <img class="skill-img" src="images/html-icon.png">
+                <img class="skill-img" src="images/css-icon.png">
+                <img class="skill-img" src="images/js-logo.png">
             </div>
-            <div class="skill-box">
-                <h4>CSS</h4>
-            </div>
-            <div class="skill-box">
-                <h4>Javascript</h4>
-            </div>
-            <div class="skill-box">
-                <h4>PHP</h4>
-            </div>
-            <div class="skill-box">
-                <h4>SQL</h4>
-            </div>
-            <div class="skill-box">
-                <h4>jQuery</h4>
-            </div>
-            <div class="skill-box">
-                <h4>Node.js</h4>
+            <div class="skill-container">
+                <img class="skill-img" src="images/php-logo.png">
+                <img class="skill-img" src="images/sql-logo.png">
+                <img class="skill-img" src="images/node-logo.png">
             </div>
         </div>
     </div>
