Added links and icons to contact me page Added portfolio images saved offline rather that pulling placeholders from other websites added blur to portfolio images

--- a/contact.html
+++ b/contact.html
@@ -28,22 +28,24 @@
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
-            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            <a href="https://github.com/FelixLetheren" target="_blank"><img src="images/github-logo.png"></a>
+            <a href="https://github.com/FelixLetheren" target="_blank">FelixLetheren</a>
         </div>
         <div class="social-item right">
-            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
-            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            <a href="https://www.linkedin.com/in/felix-letheren-09bb36100/?originalSubdomain=uk" target="_blank"><img
+                    src="images/linkedin.png"></a>
+            <a href=https://www.linkedin.com/in/felix-letheren-09bb36100/?originalSubdomain=uk target="_blank">Felix
+                Letheren</a>
         </div>
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
-            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            <a href="https://twitter.com/FelixLetheren" target="_blank"><img src="images/twitter.png"></a>
+            <a href="https://twitter.com/FelixLetheren" target="_blank">@FelixLetheren</a>
         </div>
         <div class="social-item right">
-            <a href="https://github.com/FelixLetheren"><img src="images/git-logo.png"></a>
-            <a href="https://github.com/FelixLetheren">FelixLetheren</a>
+            <a href="https://www.instagram.com/felixletheren123/?hl=en" target="_blank"><img src="images/instagram.png"></a>
+            <a href="https://www.instagram.com/felixletheren123/?hl=en" target="_blank">felixletheren123</a>
         </div>
     </div>
 </section>
