--- a/index.html
+++ b/index.html
@@ -24,38 +24,44 @@
     </div>
     <div class="port-container">
         <div class="port-item">
-            <img src="https://picsum.photos/400/300">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+            <a href="https://github.com/FelixLetheren/mayden-academy-logo"><img class="port-img"
+                                                                                src="images/mayden-logo.png"></a>
+            <a href="https://github.com/FelixLetheren/mayden-academy-logo"><h3>Mayden Academy logo</h3></a>
+            <h4>A small project to recreate the Myaden Academy logo using just css and html</h4>
         </div>
         <div class="port-item">
-            <img src="https://picsum.photos/400/300">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
-        </div>
-    </div>
-    <div class="port-container">
-        <div class="port-item">
-            <img src="https://picsum.photos/400/300">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
-        </div>
-        <div class="port-item">
-            <img src="https://picsum.photos/400/300">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+            <a href="#"><h3>Title</h3></a>
+            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
+                course.</h4>
         </div>
     </div>
     <div class="port-container">
         <div class="port-item">
-            <img src="https://picsum.photos/400/300">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+            <a href="#"><h3>Title</h3></a>
+            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
+                course.</h4>
         </div>
         <div class="port-item">
-            <img src="https://picsum.photos/400/300">
-            <h3>Title</h3>
-            <h4>Description kjasndkjjansdn kjansd asjkdbakjsdn jaksbdkja asjkbaskjd kjansdkjn ajksdnkasd</h4>
+            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+            <a href="#"><h3>Title</h3></a>
+            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
+                course.</h4>
+        </div>
+    </div>
+    <div class="port-container">
+        <div class="port-item">
+            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+            <a href="#"><h3>Title</h3></a>
+            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
+                course.</h4>
+        </div>
+        <div class="port-item">
+            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+            <a href="#"><h3>Title</h3></a>
+            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
+                course.</h4>
         </div>
     </div>
 </section>
