Added another row of skill icons

--- a/about.html
+++ b/about.html
@@ -45,6 +45,11 @@
                 <img class="skill-img" src="images/sql-logo.png">
                 <img class="skill-img" src="images/node-logo.png">
             </div>
+            <div class="skill-container">
+                <img class="skill-img" src="images/react-logo.png">
+                <img class="skill-img" src="images/scrummaster.png">
+                <img class="skill-img" src="images/vagrant.png">
+            </div>
         </div>
     </div>
     <div class="container">
