Changed E-mail address presentation as well as made the portfolio text clearly match which photo it is describing

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,7 @@
         <h1>Contact me</h1>
     </div>
     <div class="container email-box">
-        <h3>Want to get in touch? Drop me an E-mail!-</h3>
-        <h3>felix.letheren(at)gmail.com</h3>
+        <h2 id="mail">Felix.letheren@gmail.com</h2>
     </div>
     <div class="container social-container">
         <div class="social-item left">
