Added alts to images Corrected typos Cleaned up extra lines

--- a/about.html
+++ b/about.html
@@ -36,19 +36,19 @@
         <div class="skills">
             <h2>Skills</h2>
             <div class="skill-container">
-                <img class="skill-img" src="images/html-icon.png">
-                <img class="skill-img" src="images/css-icon.png">
-                <img class="skill-img" src="images/js-logo.png">
+                <img class="skill-img" src="images/html-icon.png" alt="HTML logo">
+                <img class="skill-img" src="images/css-icon.png" alt="CSS logo">
+                <img class="skill-img" src="images/js-logo.png" alt="Javascript logo">
             </div>
             <div class="skill-container">
-                <img class="skill-img" src="images/php-logo.png">
-                <img class="skill-img" src="images/sql-logo.png">
-                <img class="skill-img" src="images/node-logo.png">
+                <img class="skill-img" src="images/php-logo.png" alt="PHP logo">
+                <img class="skill-img" src="images/sql-logo.png" alt="SQL logo">
+                <img class="skill-img" src="images/node-logo.png" alt="Node logo">
             </div>
             <div class="skill-container">
-                <img class="skill-img" src="images/react-logo.png">
-                <img class="skill-img" src="images/scrummaster.png">
-                <img class="skill-img" src="images/vagrant.png">
+                <img class="skill-img" src="images/react-logo.png" alt="React logo">
+                <img class="skill-img" src="images/scrummaster.png" alt="scrum master logo">
+                <img class="skill-img" src="images/vagrant.png" alt="vagrant logo">
             </div>
         </div>
     </div>
@@ -57,7 +57,7 @@
             <h2>Work Experience</h2>
             <div class="exp-entry">
                 <div class="exp-img">
-                    <img src="images/Thai-Leisure-Group-logo.png">
+                    <img src="images/Thai-Leisure-Group-logo.png" alt="Thai Leisure Group Logo">
                 </div>
                 <h3>Thai Leisure Group</h3>
                 <h2>Business Manager</h2>
