--- a/contact.html
+++ b/contact.html
@@ -23,28 +23,28 @@
         <h1>Contact me</h1>
     </div>
     <div class="container email-box">
-        <h2 id="mail">Felix.letheren@gmail.com</h2>
+        <h2 id="mail">felix.letheren@gmail.com</h2>
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://github.com/FelixLetheren" target="_blank"><img src="images/github-logo.png"></a>
+            <a href="https://github.com/FelixLetheren" target="_blank"><img src="images/github-logo.png" alt="Git Hub Logo"></a>
             <a href="https://github.com/FelixLetheren" target="_blank">FelixLetheren</a>
         </div>
         <div class="social-item right">
             <a href="https://www.linkedin.com/in/felix-letheren-09bb36100/?originalSubdomain=uk" target="_blank"><img
-                    src="images/linkedin.png"></a>
+                    src="images/linkedin.png" alt="linked in logo"></a>
             <a href=https://www.linkedin.com/in/felix-letheren-09bb36100/?originalSubdomain=uk target="_blank">Felix
                 Letheren</a>
         </div>
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://twitter.com/FelixLetheren" target="_blank"><img src="images/twitter.png"></a>
+            <a href="https://twitter.com/FelixLetheren" target="_blank"><img src="images/twitter.png" alt="twitter logo"></a>
             <a href="https://twitter.com/FelixLetheren" target="_blank">@FelixLetheren</a>
         </div>
         <div class="social-item right">
-            <a href="https://www.instagram.com/felixletheren123/?hl=en" target="_blank"><img src="images/instagram.png"></a>
-            <a href="https://www.instagram.com/felixletheren123/?hl=en" target="_blank">felixletheren123</a>
+            <a href="https://www.instagram.com/felixletheren123/" target="_blank"><img src="images/instagram.png" alt="instagram logo"></a>
+            <a href="https://www.instagram.com/felixletheren123/" target="_blank">felixletheren123</a>
         </div>
     </div>
 </section>
