--- a/index.html
+++ b/index.html
@@ -22,43 +22,43 @@
     <div class="hero">
         <h1>Portfolio</h1>
     </div>
-    <div class="port-container">
-        <div class="port-item">
-            <a href="https://github.com/FelixLetheren/mayden-academy-logo"><img class="port-img"
-                                                                                src="images/mayden-logo.png"></a>
+    <div class="portfolio-container">
+        <div class="portfolio-item">
+            <a href="https://github.com/FelixLetheren/mayden-academy-logo"><img class="portfolio-img"
+                                                                                src="images/mayden-logo.png" alt="Mayden Academy Logo"></a>
             <a href="https://github.com/FelixLetheren/mayden-academy-logo"><h3>Mayden Academy logo</h3></a>
-            <h4>A small project to recreate the Myaden Academy logo using just css and html</h4>
+            <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
-        <div class="port-item">
-            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+        <div class="portfolio-item">
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
     </div>
-    <div class="port-container">
-        <div class="port-item">
-            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+    <div class="portfolio-container">
+        <div class="portfolio-item">
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
-        <div class="port-item">
-            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+        <div class="portfolio-item">
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
     </div>
-    <div class="port-container">
-        <div class="port-item">
-            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+    <div class="portfolio-container">
+        <div class="portfolio-item">
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
-        <div class="port-item">
-            <a href="#"><img class="port-img" src="images/placeholder.png"></a>
+        <div class="portfolio-item">
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
